deploy/gitops/apps/data-management/namespace-policies/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-management-default
  namespace: data-management
  labels:
    app.kubernetes.io/part-of: market-raccoon
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: raccoon-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability-stack
        - podSelector: {}
